[gd_scene load_steps=3 format=3 uid="uid://dy14vlevi4nww"]

[ext_resource type="Script" path="res://multiplayer/http_Login_Register/script/MyChat.gd" id="1_thrsp"]
[ext_resource type="PackedScene" uid="uid://0p00jkfyslpo" path="res://sceane/test_world.tscn" id="2_q7avv"]

[node name="Mychat_LR" type="Node2D"]
script = ExtResource("1_thrsp")
chat = ExtResource("2_q7avv")

[node name="login" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -6.0
offset_right = 1150.0
offset_bottom = 644.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="login"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -39.0
offset_right = 150.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="ip" type="LineEdit" parent="login/VBoxContainer"]
layout_mode = 2
text = "localhost:8000"
placeholder_text = "ip"

[node name="username" type="LineEdit" parent="login/VBoxContainer"]
layout_mode = 2
placeholder_text = "username"

[node name="senha" type="LineEdit" parent="login/VBoxContainer"]
layout_mode = 2
placeholder_text = "Senha"

[node name="HBoxContainer" type="HBoxContainer" parent="login/VBoxContainer"]
layout_mode = 2

[node name="login" type="Button" parent="login/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "login"

[node name="register" type="Button" parent="login/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "register"

[node name="Label" type="Label" parent="login"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -198.0
offset_right = 198.0
offset_bottom = 218.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="Log_Reg" type="HTTPRequest" parent="."]

[connection signal="pressed" from="login/VBoxContainer/HBoxContainer/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="login/VBoxContainer/HBoxContainer/register" to="." method="_on_register_pressed"]
